--- a/views/favourites/index.ejs
+++ b/views/favourites/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 <div class="container">
-    <h2> Your Favourites</h2>
+    <h2 class="main-title"> Your Favourites</h2>
     <% if (locals.user){  %> 
     <div class="row">
         <% user.favourites.forEach(function(fav){%> 
