--- a/views/favourites/show.ejs
+++ b/views/favourites/show.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 <div class="container">
-    <h2> Your Favourites Link View</h2>
+    <h2 class="main-title"> Your Favourites Link View</h2>
     <% if (locals.user){  %> 
        
             <h5>Favourite Information</h5>
