--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <%- include('partials/header') %>
     <div class="home-title">
-        <h1 >Welcome to <span>Resource Vault</span></h1>
+        <h1>Welcome to <span>Resource Vault</span></h1>
+    </div>
+    <div class="home-content">
         <h6>Resource Vault is a collection of links and resources for a software engineering student.</h6>
     </div>
     <div class="home-content">
