--- a/views/links/edit.ejs
+++ b/views/links/edit.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
-<h2> Add New Favourite</h2>
+<h2 class="main-title"> Add New Favourite</h2>
 
 <form class="add-forms" action="/links/<%=link.id%>?_method=PUT" method="POST">
 
