--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="container center-align">
 
-    <h2> Add New Resource</h2>
+    <h2 class="main-title"> Add New Resource</h2>
 
     <form class="add-forms" action="/links" method="POST">
     
@@ -27,7 +27,7 @@
             </select>
         </label><br>
         <br>
-        <button class="btn" type="submit" value="Add Link">add</button>
+        <button class="btn" type="submit" value="Add Link">Add Resource</button>
 
     </form>
 
