--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 <div class="container center-align">
-    <h2> User Profile</h2>
+    <h2 class="main-title"> User Profile</h2>
     
     <ul>
         <li>Name: <%= user.name%></li>
