--- a/views/categories/new.ejs
+++ b/views/categories/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="container center-align">
 
-    <h2> Add New Category</h2>
+    <h2 class="main-title"> Add New Category</h2>
     
     <form class="add-forms" action="/categories" method="POST">
     
@@ -10,7 +10,7 @@
             <input type="text" name="name" size="20">
         </label><br><br>
         
-        <button class="btn" type="submit" value="Add Link">Add</button>
+        <button class="btn" type="submit" value="Add Link">Add Category</button>
     </form>
 </div>
 
