--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,7 +1,6 @@
 <%- include('../partials/header') %>
 <div class="container">
-    <h2> User Profile</h2>
-    <br>
+    <h2 class="main-title"> User Profile</h2>
 </div>
 
 <%- include('../partials/footer') %>
