--- a/views/favourites/index.ejs
+++ b/views/favourites/index.ejs
@@ -2,21 +2,19 @@
 <div class="container">
     <h2 class="main-title"> Your Favourites</h2>
     <% if (locals.user){  %> 
-    <div class="row">
+    <div class="links">
         <% user.favourites.forEach(function(fav){%> 
-            <div class="col s12 m4">
-                <div class="card">
+                <div class="link-card">
                     <div class="card-content">
-                        <h5 class="card-header card-title"><%=fav.name%></h5>
-                        <h6 class="card-subtitle mb-2 text-muted"><%=fav.category%></h6>
+                        <span class="card-title"><%=fav.name%></span>
                         <p class="card-text"><%=fav.description%></p>
                     </div>
-                    <div class="card-action">
-                        <a href="<%=fav.link%>" class="card-link" target="_blank">direct link</a><br>
-                        <a href="/users/<%=user.id%>/favourites/<%=fav.id%>" class="card-link">more information</a>
+                    <div class="hr"></div>
+                    <div class="card-actions">
+                        <a href="<%=fav.link%>" class="card-action" target="_blank">Direct Link</a><br>
+                        <a href="/users/<%=user.id%>/favourites/<%=fav.id%>" class="card-action">More Information</a>
                     </div>
                 </div>
-            </div>
         <%})%>
     </div>
     <%}%>
