--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,17 +1,10 @@
 <%- include('../partials/header') %>
-<div class="container center-align">
+<div class="form-page">
     <h2 class="main-title"> User Profile</h2>
     
-    <ul>
-        <li>Name: <%= user.name%></li>
-        <li>Email: <%= user.email%></li>
-    </ul>
-    
-    <h4>Your Favourites</h4>
+    <h4>Name: <%= user.name%></h4>
+    <h4>Email: <%= user.email%></h4>
+
 </div>
-
-
-
-
 
 <%- include('../partials/footer') %>
