--- a/views/categories/new.ejs
+++ b/views/categories/new.ejs
@@ -1,16 +1,16 @@
 <%- include('../partials/header') %>
 
-<div class="container center-align">
+<div class="form-page">
 
     <h2 class="main-title"> Add New Category</h2>
     
-    <form class="add-forms" action="/categories" method="POST">
+    <form class="form" action="/categories" method="POST">
     
-        <label class="labels">Name:
-            <input type="text" name="name" size="20">
+        <label class="labels">Name<br>
+            <input type="text" name="name" size="20" class="input">
         </label><br><br>
         
-        <button class="btn" type="submit" value="Add Link">Add Category</button>
+        <button class="submit-btn" type="submit" value="Add Link">Add Category</button>
     </form>
 </div>
 
